# atrv_workstation

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: person_tracking.launch
scripts/: camera_viz.py  person_tracking.py  statemachine.py
