<package format="2">
	<name>atrv_workstation</name>
	<version>0.0.1</version>
	<description>Workstation stuff for atrv.</description>

	<maintainer email="matej.dobrevski@fri.uni-lj.si">Matej Dobrevski</maintainer>

	<author>Vid Rijavec</author>

	<license>MIT</license>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>std_msgs</depend>

	<build_depend>message_generation</build_depend>
	<build_export_depend>message_runtime</build_export_depend>

	<exec_depend>message_runtime</exec_depend>
	<exec_depend>rospy</exec_depend>

</package>
